syntax = "proto3";

package cart;

option go_package = 'github.com/asmile1559/dyshop/pb/backend/cart;cart';

service CartService {
  rpc AddItem(AddItemReq) returns (AddItemResp) {}
  rpc GetCart(GetCartReq) returns (GetCartResp) {}
  rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {}
  rpc DeleteCart(DeleteCartReq) returns (DeleteCartResp) {}
}

message CartItem {
  int32 id = 1;
  int32 user_id = 2;
  uint32 product_id = 3;
  int32  quantity = 4;
}

message AddItemReq {
  uint32 user_id = 1;
  CartItem item = 2;
}

message AddItemResp {
  int32 cart_id = 1;
}

message EmptyCartReq {
  uint32 user_id = 1;
}

message EmptyCartResp {}

message GetCartReq {
  uint32 user_id = 1;
}

message GetCartResp {
  uint32 user_id = 1;
  repeated CartItem items = 2;
}

message DeleteCartReq {
  uint32 user_id = 1;
  repeated CartItem items = 2;
}

message DeleteCartResp {}